<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date">Crime Date</string>
    <string name="police">Police!</string>
    <string name="new_crime">New Crime</string>
    <string name="crimes">Crimes\n</string>
    <string name="list_of_crimes_is_empty">List of Crimes is empty..</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="send_crime_report">Send Crime report</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="image_of_crime">image of crime</string>
    <string name="button_for_set_image_of_crime">button for set image of crime</string>
    <string name="back_to_crime">back to crime</string>
</resources>