<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/crime_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/img_crime"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_of_crime"
            android:background="@color/cardview_dark_background"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageButton
            android:id="@+id/btn_set_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_for_set_image_of_crime"
            android:src="@drawable/photo_camera_svgrepo_com"
            app:layout_constraintEnd_toEndOf="@id/img_crime"
            app:layout_constraintBottom_toBottomOf="@id/img_crime"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/textView7"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_title_label"
            app:layout_constraintTop_toBottomOf="@id/img_crime"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crime_title_hint"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="Autofill"
            app:layout_constraintTop_toBottomOf="@id/textView7"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView8"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crime_details_label"
            app:layout_constraintTop_toBottomOf="@id/crime_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/crime_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize"
            app:layout_constraintTop_toBottomOf="@id/textView8"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="19.03.2025" />

        <Button
            android:id="@+id/crime_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize"
            app:layout_constraintTop_toBottomOf="@id/crime_date"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="22:20" />

        <CheckBox
            android:id="@+id/crime_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/crime_solved_label"
            tools:ignore="VisualLintButtonSize"
            app:layout_constraintTop_toBottomOf="@id/crime_time"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_choose_suspect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_suspect"
            app:layout_constraintTop_toBottomOf="@id/crime_solved"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_send_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_crime_report"
            app:layout_constraintTop_toBottomOf="@id/btn_choose_suspect"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</FrameLayout>