<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_crime_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_crime_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crime_date"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_crime_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_solved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/crime_solved_label"
        android:src="@drawable/baseline_local_police"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>